# django-rest-docker

./: db.sqlite3  pyproject.toml  readme.md
cars/: models.py  serializer.py  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_auto_20200910_0241.py  0003_auto_20200910_0242.py  0004_remove_cars_owner.py  0005_cars_owner.py
garage/: settings.py  urls.py
